--- a/DataIngestionPlayground/DataIngestionPlayground.csproj
+++ b/DataIngestionPlayground/DataIngestionPlayground.csproj
@@ -20,5 +20,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Extensions.DataIngestion\Microsoft.Extensions.DataIngestion.csproj" />
   </ItemGroup>
+    
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
